# creative-os

./: .gitignore  BUILD_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  build-all.sh
.github/workflows/: ci.yml
aurora/: CMakeLists.txt  EXTENDING.md  README.md  build.sh
aurora-ui/: Package.swift  README.md
aurora-ui/Sources/AuroraBridge/include/: module.modulemap
aurora-ui/Sources/AuroraUI/: ContentView.swift  KernelManager.swift  main.swift
aurora/include/: aurora_abi.h
aurora/src/kernel/: l4_stub.cpp  test_main.cpp
